<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".About">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile"
                android:layout_centerHorizontal="true"
                android:elevation="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    app:contentPaddingTop="15dp"
                    app:contentPaddingLeft="15dp"
                    app:contentPaddingRight="15dp"
                    app:contentPaddingBottom="15dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anukul_kumar"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:layout_marginTop="60dp"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/android_apps_developer"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_base_your_decisions_on_the_advice_of_those_who_won_t_have_to_deal_with_the_results"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/india"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal"

                            />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>




            </LinearLayout>


        </RelativeLayout>





    </LinearLayout>




